--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_DB_URL_LOCAL='mongodb://127.0.0.1:27017/movieDb'
+MONGO_DB_URL='mongodb+srv://Abid:k26sKLo8UmVoDrCZ@cluster0.sfxs1fh.mongodb.net/movieDb?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET_KEY='moviebooking'
